--- a/config/database.yml
+++ b/config/database.yml
@@ -12,14 +12,18 @@
 # Configure Using Gemfile
 # gem 'pg'
 #
+# development:
+#   adapter: postgresql
+#   encoding: unicode
+#   database: wine_cellar_development
+#   pool: 5
+#   username: postgres
+#   password: password
 development:
-  adapter: postgresql
-  encoding: unicode
-  database: wine_cellar_development
+  adapter: sqlite3
+  database: db/development.sqlite3
   pool: 5
-  username: postgres
-  password: password
-
+  timeout: 5000
   # Connect on a TCP socket. Omitted by default since the client uses a
   # domain socket that doesn't need configuration. Windows does not have
   # domain sockets, so uncomment these lines.
@@ -38,14 +42,19 @@ development:
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
+# test:
+#   adapter: postgresql
+#   encoding: unicode
+#   database: wine_cellar_test
+#   pool: 5
+#   username: wine_cellar
+#   password:
 test:
-  adapter: postgresql
-  encoding: unicode
-  database: wine_cellar_test
+  adapter: sqlite3
+  database: db/test.sqlite3
   pool: 5
-  username: wine_cellar
-  password:
-
+  timeout: 5000
+  
 production:
   adapter: postgresql
   encoding: unicode
